# TournamentBracketGenerator

./: CMakeLists.txt  Competitor.cpp  Competitor.h  Hello.cpp  Hello.h  LICENSE  Match.cpp  Match.h  QTWindowTry.cpp  QTWindowTry.h  README.md  TournamentSingleElimination.cpp  TournamentSingleElimination.h  Tournament_SingleElimination.cpp  Tournament_SingleElimination.h  main.cpp  qtTry.cpp  qtTry.h  tabLibray.cpp  tabLibray.h
